# canyonworks

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: DESIGN.md  TASKS.md  WASMGEN.md  WORKLOG.md
src/: main.ts  style.css
src/core/: hex.ts  noise.ts  perf.ts  rng.ts  wasmGen.ts
src/edit/: editor.ts
src/ui/: materialEditor.ts  palettePanel.ts  panel.ts
src/viewer/: mesaFog.ts  normalMaps.ts  overlays.ts  terrainMaterial.ts  viewer.ts
tools/: gen-heightmaps.mjs  gen-normalmap-test.mjs  gen-normalmaps.mjs  gen-textures.mjs  verify-volume.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/examples/: bench_native.rs
wasm/pkg/: canyonworks_wasm.d.ts  canyonworks_wasm.js  canyonworks_wasm_bg.wasm  canyonworks_wasm_bg.wasm.d.ts  package.json
wasm/src/: ao.rs  colorize.rs  fields.rs  grid.rs  lib.rs  math.rs  nets.rs  noise.rs  normals.rs  ops.rs  par.rs  params.rs  pipeline.rs  timer.rs  volume.rs
