[package]
name = "canyonworks-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM generator kernels for CanyonWorks (noise, volume fill)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ndarray = { version = "0.16", default-features = false, features = ["std"] }
rayon = { version = "1", optional = true }

[features]
# `parallel` flips the expressive kernels' loops to rayon (native builds / future
# wasm-threads). The wasm-pack build does NOT enable it.
parallel = ["dep:rayon", "ndarray/rayon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
